users, dispensaries, and offers

--- a/package.json
+++ b/package.json
@@ -34,16 +34,8 @@
 		"extends": "react-app"
 	},
 	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+		"production": [ ">0.2%", "not dead", "not op_mini all" ],
+		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
 	},
-	"proxy": "https://us-central1-leafvip-dev.cloudfunctions.net"
+	"proxy": "http://localhost:5000/leafvip-dev/us-central1"
 }
