--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"dependencies": {
 		"@material-ui/core": "^4.10.0",
 		"@material-ui/icons": "^4.9.1",
+		"@material-ui/lab": "^4.0.0-alpha.54",
 		"@material-ui/styles": "^4.10.0",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
@@ -13,6 +14,7 @@
 		"axios": "^0.19.2",
 		"cors": "^2.8.5",
 		"dayjs": "^1.8.28",
+		"firestore": "^1.1.6",
 		"jwt-decode": "^2.2.0",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
