--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"dayjs": "^1.8.28",
 		"firestore": "^1.1.6",
 		"jwt-decode": "^2.2.0",
+		"moment": "^2.26.0",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
